# CS544

./: .env  .envrc  .gitignore  .gitmodules  flake.nix  pyproject.toml
research/: CS544_Final_Project_Analysis.ipynb  eda.sql  example_analysis.ipynb  mimic.cypher  mimic_import.ipynb  mimic_importer.py  mimic_importer2.py  mimic_query.cypher
